Ich steige nicht durch git add *git add *git add *git add *git add *!

--- a/index.html
+++ b/index.html
@@ -8,15 +8,46 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <main>
-      <div class="flexbox">
-        <div class="flexelement">Box 1</div>
-        <div class="flexelement">Box 2</div>
-        <div class="flexelement">Box 3</div>
-        <div class="flexelement">Box 4</div>
+    <div class="flexbox">
+      <div class="flexelement box1">
+        <h2>Box 1:</h2>
+        <img src="res/sixhaven.jpeg" alt="Alttext..." />
+        <figcaption>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo et
+          officiis fugit consequuntur ea accusamus. Totam et accusantium vitae
+          quam?
+        </figcaption>
       </div>
-    </main>
-    <footer></footer>
+      <div class="flexelement box2">
+        <h2>Box 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempora,
+          quidem velit ab ratione obcaecati, nemo quibusdam itaque vel assumenda
+          repudiandae natus, voluptatem est eius.
+        </p>
+      </div>
+      <div class="flexelement box3">
+        <h2>Box 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempora,
+          quidem velit ab ratione obcaecati, nemo quibusdam itaque vel assumenda
+          repudiandae natus, voluptatem est eius.
+        </p>
+      </div>
+      <div class="flexelement box4">
+        <form action="contact">
+          <label for="msg">Enter your Message</label>
+          <input type="text" id="msg" />
+
+          <label for="mail">Enter your Mail Adress</label>
+          <input type="email" id="mail" />
+
+          <label for="tel">Enter your number</label>
+          <input type="number" id="tel" />
+
+          <input type="submit" value="Abschiggah" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
